k8s/overlays/shokohsc/browser-sync/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: preview
  annotations:
    dashboard.home.arpa/name: preview-postal
    dashboard.home.arpa/url: https://preview.postal.home.arpa
    dashboard.home.arpa/icon: wrench
spec:
  hostnames:
  - preview.postal.home.arpa
  parentRefs:
  - name: browser-sync
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: preview
  rules:
  - backendRefs:
    - name: browser-sync
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - name: browser-sync
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /browser-sync/socket.io
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: browser-sync
  annotations:
    dashboard.home.arpa/name: browser-sync-postal
    dashboard.home.arpa/url: https://browser-sync.postal.home.arpa
    dashboard.home.arpa/icon: wrench
spec:
  hostnames:
  - browser-sync.postal.home.arpa
  parentRefs:
  - name: browser-sync
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: browser-sync
  rules:
  - backendRefs:
    - name: browser-sync
      port: 3001
    matches:
    - path:
        type: PathPrefix
        value: /
  - backendRefs:
    - name: browser-sync
      port: 443
    matches:
    - path:
        type: PathPrefix
        value: /browser-sync
    filters:
    - cors:
        allowOrigins:
        - https://browser-sync.postal.home.arpa
        allowMethods:
        - GET
        - POST
        - OPTIONS
        allowHeaders:
        - DNT
        - X-CustomHeader
        - Keep-Alive
        - User-Agent
        - X-Requested-With
        - If-Modified-Since
        - Cache-Control
        - Content-Type
        allowCredentials: false
        maxAge: 3600
      type: CORS
